// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`в таче по дрэгу отправит метрику один раз при вращении на значимый угол 1`] = `
Array [
  Array [
    "panorama-twist",
    "exterior",
    "right",
  ],
]
`;

exports[`при дрэге мышкой отправит метрику один раз при вращении на значимый угол 1`] = `
Array [
  Array [
    "panorama-twist",
    "exterior",
    "left",
  ],
]
`;

exports[`при маунте правильно отправит метрику показа в галерее 1`] = `
Array [
  Array [
    "show-gallery",
    "panorama-shows",
    "exterior",
  ],
]
`;

exports[`при маунте правильно отправит метрику показа на странице 1`] = `
Array [
  Array [
    "panorama-shows",
    "exterior",
  ],
]
`;
